--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body style="background:url('piper.jpg')">
-    
+    <h1>Welcome to My Website</h1>
 </body>
 </html>
