--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background:url('piper.jpg')">
+<body style="background:url('piper.jpg') top center;background-size:cover;">
     <h1>Welcome to My Website</h1>
 </body>
 </html>
